--- a/notebooks/Treinamento NER - CoNLL 2003 only words.ipynb
+++ b/notebooks/Treinamento NER - CoNLL 2003 only words.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +325,7 @@
        " 9)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,68 +339,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "config = BertConfig.from_pretrained('../bert-base-cased/', num_labels=len(LABELS), output_hidden_states=True)"
+    "config = BertConfig.from_pretrained('bert-base-cased', num_labels=len(LABELS), output_hidden_states=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class BertLSTMForMaskedNerClassification(BertForMaskedNERClassification):\n",
-    "    \n",
-    "    def __init__(self, *args, **kwargs):\n",
-    "        super().__init__(*args, **kwargs)\n",
-    "        \n",
-    "        del self.classifier, self.dropout\n",
-    "        \n",
-    "        self.lstm = nn.LSTM(\n",
-    "            input_size=768,\n",
-    "            hidden_size=100,\n",
-    "            num_layers=2,\n",
-    "            batch_first=True,\n",
-    "            dropout=0.1,\n",
-    "            bidirectional=True\n",
-    "        )\n",
-    "        \n",
-    "    def forward(self, input_ids, input_mask, label_ids, label_mask):\n",
-    "\n",
-    "        _, _, hidden_states = self.bert(input_ids, attention_mask=input_mask)\n",
-    "\n",
-    "        out = self.pooler(hidden_states)\n",
-    "\n",
-    "        out, _ = self.lstm(out)\n",
-    "        # take the active logits\n",
-    "        label_mask = label_mask.view(-1)\n",
-    "        active_logits = out.view(-1, self.num_labels)[label_mask == 1]\n",
-    "\n",
-    "        # take the active labels\n",
-    "        # remove one because of the [PAD] being the 0 moved to DATASET\n",
-    "        active_labels = label_ids.view(-1)[label_mask == 1]\n",
-    "\n",
-    "        # calc the loss\n",
-    "        loss = self.loss_fct(active_logits, active_labels)\n",
-    "\n",
-    "        return loss, active_logits, active_labels"
+    "model = BertForNERClassification(config, weight_O=0.1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = BertForMaskedNERClassification(config, weight_O=0.1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 29,
    "metadata": {
     "scrolled": true
    },
@@ -408,7 +365,7 @@
     {
      "data": {
       "text/plain": [
-       "BertForMaskedNERClassification(\n",
+       "BertForNERClassification(\n",
        "  (bert): BertModel(\n",
        "    (embeddings): BertEmbeddings(\n",
        "      (word_embeddings): Embedding(28996, 768, padding_idx=0)\n",
@@ -708,7 +665,7 @@
        ")"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -719,10 +676,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, description='Evaluating', max=1606, style=ProgressStyle(description_width=…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[42145    26     0    88     0   395     0   105     0]\n",
+      " [  114   541     0    35     0   147     0    85     0]\n",
+      " [  108   147     0    29     0    48     0    14     0]\n",
+      " [  300    13     0  1021     0   357     0   151     0]\n",
+      " [  198    11     0   731     0   203     0   164     0]\n",
+      " [  109    21     0   149     0   877     0   185     0]\n",
+      " [  186    21     0    55     0   411     0    78     0]\n",
+      " [   89    28     0    70     0   307     0  1343     0]\n",
+      " [   24     1     0    12     0    90     0   130     0]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(3.336868798707256, 0.8941824695300027)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "evaluate_fn(model, dl_valid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "_IncompatibleKeys(missing_keys=['loss_fct.weight'], unexpected_keys=[])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.load_state_dict(torch.load('bertner_lastlayer.ckp'), strict=False)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -907,9 +928,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:bertenv]",
+   "display_name": "Environment (conda_nlpenv)",
    "language": "python",
-   "name": "conda-env-bertenv-py"
+   "name": "conda_nlpenv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -921,7 +942,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
