--- a/notebooks/Treinamento NER - CoNLL 2003 With MASK.ipynb
+++ b/notebooks/Treinamento NER - CoNLL 2003 With MASK.ipynb
@@ -198,7 +198,7 @@
    "source": [
     "train_pickle = 'train_feats.pickle'\n",
     "valid_pickle = 'valid_feats.pickle'\n",
-    "redo = True\n",
+    "redo = False\n",
     "if os.path.exists(train_pickle) and not redo:\n",
     "    features_train = pickle_to_features(train_pickle)\n",
     "else:\n",
@@ -215,7 +215,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features_train = convert_examples_to_features_masked(examples['train'], labels, 128, tokenizer, do_mask=True)\n",
+    "features_valid = convert_examples_to_features_masked(examples['valid'], labels, 128, tokenizer, do_mask=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,15 +291,7 @@
       "##KE       0 1\n",
       "##T        0 1\n",
       "-          0 1\n",
-      "L          1 1\n",
-      "##EI       0 1\n",
-      "##CE       0 1\n",
-      "##ST       0 1\n",
-      "##ER       0 1\n",
-      "##S        0 1\n",
-      "##H        0 1\n",
-      "##IR       0 1\n",
-      "##E        0 1\n",
+      "[MASK]     1 1\n",
       "T          0 1\n",
       "##A        0 1\n",
       "##KE       0 1\n",
@@ -402,6 +404,14 @@
       "[PAD]      0 0\n",
       "[PAD]      0 0\n",
       "[PAD]      0 0\n",
+      "[PAD]      0 0\n",
+      "[PAD]      0 0\n",
+      "[PAD]      0 0\n",
+      "[PAD]      0 0\n",
+      "[PAD]      0 0\n",
+      "[PAD]      0 0\n",
+      "[PAD]      0 0\n",
+      "[PAD]      0 0\n",
       "[PAD]      0 0\n"
      ]
     }
@@ -422,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,17 +461,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from sklearn.metrics import confusion_matrix"
+    "from sklearn.metrics import confusion_matrix, f1_score\n",
+    "from seqeval.metrics import classification_report"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'LABELS' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-20-8fe1c994c2da>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mLABELS\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'LABELS' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "LABELS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +518,12 @@
     "        y_preds += active_logits.tolist()\n",
     "        accuracies += accs\n",
     "        \n",
-    "    conf = confusion_matrix([LABELS[y] for y in y_trues], [LABELS[y] for y in y_preds], labels=LABELS)\n",
+    "    trues = [LABELS[y] for y in y_trues]\n",
+    "    preds = [LABELS[y] for y in y_preds]\n",
+    "    conf = confusion_matrix(trues, preds, labels=LABELS)\n",
+    "    f1 = f1_score(trues, preds, average='micro')\n",
+    "    print(f'F1 = {f1}')\n",
+    "    print(classification_report(trues, preds))\n",
     "    if return_conf:\n",
     "        return conf\n",
     "    print(conf)\n",
@@ -518,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +564,7 @@
        "'cuda'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +595,7 @@
        " 9)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -581,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {
     "scrolled": true
    },
@@ -898,7 +935,7 @@
        ")"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -909,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -918,28 +955,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "_IncompatibleKeys(missing_keys=['loss_fct.weight'], unexpected_keys=[])"
+       "<All keys matched successfully>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.load_state_dict(torch.load('bertner_lastlayer.ckp'), strict=False)"
+    "# model.load_state_dict(torch.load('bertner_lastlayer.ckp'), strict=False)\n",
+    "model.load_state_dict(torch.load('bert_masked_2.ckp'), strict=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
+   "execution_count": 29,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -960,24 +1000,35 @@
      "output_type": "stream",
      "text": [
       "\r",
-      "[[2418   11    6   22   16   26   21   13    7]\n",
-      " [  46   21    1   22    0   11    2   10    0]\n",
-      " [  32    1    3    0   11    1    4    0    4]\n",
-      " [  89    1    1  296   22   37    5   17    1]\n",
-      " [  38    0    0   34  458    4   14    0    8]\n",
-      " [  51    2    0   57    1   95    7   18    1]\n",
-      " [  13    0    0    6   15    5   50    1    9]\n",
-      " [  39    4    0   32    2   28    0   95    1]\n",
-      " [   2    0    0    0    4    0    4    0    9]]\n"
+      "F1 = 0.6998833138856476\n",
+      "           precision    recall  f1-score   support\n",
+      "\n",
+      "      PER       0.59      0.48      0.53       664\n",
+      "      ORG       0.29      0.27      0.28       272\n",
+      "     MISC       0.19      0.16      0.17       139\n",
+      "      LOC       0.39      0.44      0.41       210\n",
+      "\n",
+      "micro avg       0.44      0.39      0.42      1285\n",
+      "macro avg       0.45      0.39      0.42      1285\n",
+      "\n",
+      "[[2233   51   11   68   22   64    9   80    2]\n",
+      " [  62   18    0   10    0   16    0    7    0]\n",
+      " [  25    3    9    5    4    2    5    2    1]\n",
+      " [ 180    5    2  232    3   21    1   25    0]\n",
+      " [ 214    0    2    6  306    1   19    4    4]\n",
+      " [ 121    8    0   18    0   70    0   15    0]\n",
+      " [  40    1    3    1    9    7   36    1    1]\n",
+      " [  79    6    0    8    0   17    0   91    0]\n",
+      " [  14    0    0    0    0    0    0    1    4]]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(3.169115520269305, 0.8039673278879813)"
+       "(3.423512717820148, 0.6998833138856476)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
